fix: modal not showing (is-active vs is-open), hide car photo in iframe

--- a/css/cardetails.css
+++ b/css/cardetails.css
@@ -757,7 +757,7 @@
 	padding: 16px;
 	box-sizing: border-box;
 }
-#vrc-booking-modal-overlay.is-open {
+#vrc-booking-modal-overlay.is-active {
 	display: flex;
 }
 
